compatible android 2 firefox new interfaces

--- a/views/index.html
+++ b/views/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "stylesheet" type = "text/css" href = "/assets/css/style.css">
     <title>Zombitron</title>
 </head>
 <body>
+    <p>Démo interfaces</p>
     <ul> 
-        <li> <a href="/interface1">Interface 1</a></li>
-        <li> <a href="/interface2">Interface 2</a></li>
-        <li> <a href="/certificate">Certificate</a></li>
+        <li> <a href="/logger">Logger</a></li>
+        <li> <a href="/everything">Everything</a></li>
+        <li> <a href="/xy">Slider XY</a></li>
     </ul>
+    <p>For Iphones IOS < 13, install and activate the <a href="/certificate">Certificate</a></p>
 </body>
 </html>
