done updating + cli

--- a/views/index.html
+++ b/views/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
     <title>Zombitron</title>
 </head>
+
 <body>
-    <ul> 
+    <p>Démo interfaces</p>
+    <ul>
         <li> <a href="/interface1">Interface 1</a></li>
         <li> <a href="/interface2">Interface 2</a></li>
-        <li> <a href="/certificate">Certificate</a></li>
     </ul>
+    <p>For Iphones IOS < 13, install and activate the <a href="/certificate">Certificate</a></p>
 </body>
+
 </html>
