--- a/views/interface1.html
+++ b/views/interface1.html
@@ -4,33 +4,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Innterface 1</title>
+    <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+    <title>Interface 1</title>
 </head>
 
 <body data-zombitron='{
+    "name": "phone1",
     "acceleration": {
         "x": "/phone1/acceleration_x",
         "y": "/phone1/acceleration_y",
         "z": "/phone1/acceleration_z"
-    } 
-}'>
-
-<div data-zombitron='{
-    "XY": {
-        "x1": "/phone1/x",
-        "y1": "/phone1/y"
+    },
+    "orientation": {
+        "alpha": "/phone1/alpha",
+        "beta": "/phone1/beta",
+        "gamma": "/phone1/gamma"
     }
 }'>
-</div>
+
+    <div id='XY' data-zombitron='{
+    "type": "sliderxy",
+    "x": "/phone1/x",
+    "y": "/phone1/y",
+    "cursor" : true
+}'>
+    </div>
 
     <script type="text/javascript" src="/zombitron/client/zombiterface.js"></script>
     <style>
-        div {
-            position: absolute;
-            left: 0;
-            right: 0;
-            top: 0;
-            bottom: 0;
+        #XY {
+            top: 0px;
+            left: 0px;
+            width: 100%;
+            height: 100%;
             background-color: rgb(133, 253, 201);
         }
     </style>
