--- a/views/interface2.html
+++ b/views/interface2.html
@@ -4,31 +4,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
     <title>Interface 2</title>
 </head>
 
 <body data-zombitron='{
+        "name": "phone2",
+        "acceleration": {
+            "x": "/phone2/acceleration_x",
+            "y": "/phone2/acceleration_y",
+            "z": "/phone2/acceleration_z"
+        },
         "orientation": {
             "alpha": "/phone2/alpha",
             "beta": "/phone2/beta",
             "gamma": "/phone2/gamma"
         }
     }'>
-    <div data-zombitron='{
-        "XY": {
-            "x1": "/phone2/x",
-            "y1": "/phone2/y"
-        }
+    <div id='XY' data-zombitron='{
+        "type": "sliderxy",
+        "x": "/phone2/x",
+        "y": "/phone2/y",
+        "cursor" : true
     }'>
     </div>
     <script type="text/javascript" src="/zombitron/client/zombiterface.js"></script>
     <style>
-        div {
-            position: absolute;
-            left: 0;
-            right: 0;
-            top: 0;
-            bottom: 0;
+        #XY {
+            top: 0px;
+            left: 0px;
+            width: 100%;
+            height: 100%;
             background-color: rgb(253, 173, 173);
         }
     </style>
