--- a/views/xy.html
+++ b/views/xy.html
@@ -4,24 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" type = "text/css" href = "/assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
     <title>Slider XY</title>
 </head>
 
-<body data-zombitron='{
-        "name": "sliderXY"
-    }'>
-
-    <div id='XY' data-zombitron='{
-        "type": "sliderxy",
-        "x": "/demo/x",
-        "y": "/demo/y",
-        "cursor" : true
-    }'>
+<body>
+    <div id="container" data-zombitron='{"name": "sliderXY"}'>
+        <div id='XY' data-zombitron='{
+            "type": "sliderxy",
+            "x": "/demo/x",
+            "y": "/demo/y",
+            "cursor" : true
+        }'></div>
     </div>
-
     <script type="text/javascript" src="/zombitron/client/zombiterface.js"></script>
-
     <style>
         #XY {
             top: 0px;
@@ -31,5 +27,4 @@
         }
     </style>
 </body>
-
 </html>
